--- a/index.html
+++ b/index.html
@@ -1,77 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Recipe page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <meta name="description" content="Recipe page challenge Frontend Mentor">
+  <meta name="keywords" content="Recipe, Frontend, Mentor">
+  <meta name="author" content="Cristian Rodriguez">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&family=Young+Serif&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-
-  Simple Omelette Recipe
-
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-
-  Preparation time
-
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
-
-  Ingredients
-
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main class="content">
+    <article class="recipe">
+      <figure class="recipe__fig">
+        <img class="recipe__omelette" src="assets/images/image-omelette.jpeg" alt="omelette">
+      </figure>
+      <div class="recipe__introduction">
+        <h1 class="recipe__title">Simple Omelette Recipe</h1>
+        <p class="recipe__info">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs
+          cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+      </div>
+      <ul class="recipe__time">
+        <span class="recipe__preparation">Preparation time</span>
+        <li class="timeItem"><span>Total:</span> Approximately 10 minutes</li>
+        <li class="timeItem"><span>Preparation:</span> 5 minutes</li>
+        <li class="timeItem"><span>Cooking:</span> 5 minutes</li>
+      </ul>
+      <div class="recipe__ingredients">
+        <p class="ingredientTitle">Ingredients</p>
+        <li class="ingredient">2-3 large eggs</li>
+        <li class="ingredient">Salt, to taste</li>
+        <li class="ingredient">Pepper, to taste</li>
+        <li class="ingredient">1 tablespoon of butter or oil</li>
+        <li class="ingredient">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      </div>
+      <div class="recipe__instructions">
+        <p class="instructionTitle">Instructions</p>
+        <ol class="instruction">
+          <li class="instructionItem"><span>Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and
+            pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
+          <li class="instructionItem"><span>Heat the pan:</span> Place a non-stick frying pan over medium heat and add
+            butter or oil.</li>
+          <li class="instructionItem"><span>Cook the omelette:</span> Once the butter is melted and bubbling, pour in
+            the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
+          <li class="instructionItem"><span>Add fillings (optional):</span> When the eggs begin to set at the edges but
+            are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
+          <li class="instructionItem"><span>Fold and serve:</span> As the omelette continues to cook, carefully lift one
+            edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
+          <li class="instructionItem"><span>Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
+        </ol>
+      </div>
+      <div class="recipe__nutrition">
+        <p class="nutritionTitle">Nutrition</p>
+        <p class="nutritionInfo">The table below shows nutritional values per serving without the additional fillings.
+        </p>
+        <div class="nutritionTable">
+          <div class="row">
+            <p class="name">Calories</p>
+            <span class="value">277kcal</span>
+          </div>
+          <div class="row">
+            <p class="name">Carbs</p>
+            <span class="value">0g</span>
+          </div>
+          <div class="row">
+            <p class="name">Protein</p>
+            <span class="value">20g</span>
+          </div>
+          <div class="row">
+            <p class="name">Fat</p>
+            <span class="value">22g</span>
+          </div>
+        </div>
+      </div>
+    </article>
+  </main>
 </body>
+
 </html>
